--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     
   }
   .box {
+    
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 5px;
@@ -15,8 +16,10 @@
     text-align: center;
     aspect-ratio: 1;
   }
-
-#bomb{
+  .revealBox
+  
+  .boxBomb{
 
     background-color: black;
 }
+
