--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,121 @@
+body {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  box-sizing: border-box;
+  font-family: "Poetsen One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+#container {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#score-board {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+#mines-left,
+#timer {
+  color: purple
+}
+
 #board {
-    display: grid;
-    grid-template-columns: repeat(8,50px);
-    margin: 100px;
-    height: 50px;
-    width: 50px;
-    
-    
-  }
-  .box {
-    
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 5px;
-    font-size: 20px;
-    text-align: center;
-    aspect-ratio: 1;
-    
-  }
-  .revealBox{
-    background-color: pink;
-  }
-  .revealBoxNum{
-    background-color: blue;
-  }
+  display: grid;
+  grid-template-columns: repeat(8, 50px);
+  margin: 25px;
+  border: 25px black;
+  border-bottom: 10px solid #757575;
+  border-right: 10px solid #757575;
+  border-left: 10px solid #ebeaeb;
+  border-top: 10px solid #fdfcfd;
+}
 
-  .boxBomb{
+.box {
 
-    background-color: black;
- }
-  .boxIgnore{
-    background-color: green;
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  border: 1px solid rgba(122, 120, 120, 0.748);
+  text-align: center;
+  aspect-ratio: 1;
+}
 
- }
+
+.revealBox {
+  display: flex;
+  background: white;
+  background-color: rgb(150, 150, 152);
+  font-size: 45px;
+  text-align: center;
+  justify-content: center;
+}
+
+.revealedBomb {
+  display: flex;
+  background-color: purple;
+  background-image: url('../assets/bomb.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-align: center;
+  justify-content: center;
+  
+}
+.explodedBomb{
+  display: flex;
+  background-color: purple;
+  background-image: url('../assets/exploded.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-align: center;
+  justify-content: center;
   
 
+}
 
+button {
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.levels{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width:400px;
+}
+.flag {
+  display: flex;
+  background: purple;
+  background-image: url('../assets/Flag.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-align: center;
+  justify-content: center;
+  
+}
+.bombDefused{
+  display: flex;
+  background: purple;
+  background-image: url('../assets/ThumbsUp.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-align: center;
+  justify-content: center;
+  
+
+}
