--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,16 @@ main {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 0 100px;
   width: 100%;
 }
+#flags-board,#timer-board{
+  display: flex;
 
+}
 #mines-left,
-#timer {
+#timer, #timerText{
+  padding: 5px;
   color: purple
 }
 
